<resources>
    <string name="app_name">PomodoroReminder</string>

    <string name="no_reminder">点击下方的加号按钮以添加提醒事项</string>
    <!-- DrawerMenu -->
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="timer">计时器</string>
    <string name="notify">提醒</string>

    <string name="userName">未登陆</string>

    <string name="editTextHint">输入待办事项</string>

    <string name="date">提醒日期</string>
    <string name="time">提醒时间</string>
    <string name="isRepeat">是否重复</string>
    <string name="repeatNo">重复间隔</string>
    <string name="repeatType">重复类型</string>
    <string name="toDoListTab">待办列表</string>
    <string name="pomodoroTab">番茄时钟</string>
    <string name="forumTab">番茄说</string>
    <string name="listHintText">点击+添加待办事项</string>

    <string name="titleActivityAddReminder">添加提醒</string>
    <string name="titleActivityEditReminder">修改提醒</string>
    <string name="tomato_string">番茄时钟</string>
    <string name="shut_off_reminder">关闭提醒</string>
    <string name="turn_on_reminder">开启提醒</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_name">设置</string>

    <string name="status_tomato">番茄时间</string>
    <string name="status_rest">休息时间</string>

    <string name="preferences">偏好设置</string>
    <string name="pref_pomodoro_cat">番茄工作法设置</string>
    <string name="pref_tomato_duration_title">番茄长度</string>
    <string name="pref_tomato_duration_summary">番茄时长 = </string>

    <string name="pref_rest_duration_title">休息长度</string>
    <string name="pref_rest_duration_summary">休息时长 =  </string>

    <string name="pref_notification_timer_title">通知栏计时器</string>
    <string name="pref_notification_timer_summary">在通知栏显示计时器</string>

    <string name="pref_tomato_cat">番茄铃声</string>
    <string name="pref_tomato_ringtone_title">铃声</string>
    <string name="pref_tomato_ringtone_summary">番茄时间结束后的提醒铃声</string>

    <string name="pref_tomato_vibrate_title">振动</string>
    <string name="pref_tomato_vibrate_summary">番茄时间结束后振动提醒</string>
    <string name="pref_tomato_volume_title">音量</string>
    <string name="pref_tomato_volume_summary">铃声音量 =  </string>
    <string name="pref_tomato_delay_title">延时</string>
    <string name="pref_tomato_delay_summary">延时时间： </string>

    <string name="pref_rest_cat">休息铃声</string>
    <string name="pref_rest_ringtone_title">铃声</string>
    <string name="pref_rest_ringtone_summary">休息结束后的提醒铃声</string>
    <string name="pref_rest_vibrate_title">振动</string>
    <string name="pref_rest_vibrate_summary">休息结束后振动提醒</string>
    <string name="pref_rest_volume_title">音量</string>
    <string name="pref_rest_volume_summary">铃声音量 = </string>
    <string name="pref_rest_delay_title">延时</string>
    <string name="pref_rest_delay_summary">延时时间： </string>

    <string name="alarm_message_tomato">O(∩_∩)O 完成一个番茄了，休息一下吧！</string>
    <string name="alarm_message_rest">休息好了，来个番茄吧！</string>

    <string name="start_tomato">开始番茄</string>
    <string name="start_rest">开始休息</string>
    <string name="stop_working">停止工作</string>
    <string name="reset_tomato">清空番茄</string>

    <string name="alarm_title">番茄时钟</string>

    <string name="count_text">已完成 ： </string>
    <string name="no_count_text">(⊙o⊙)没有番茄，开始番茄时钟吧</string>

    <string name="title_about">关于</string>
    <string name="version_text">PomodoroReminder
          番茄提醒
    </string>
    <string name="version_no">版本1.0.0</string>
    <string name="license"><u>开源协议</u></string>
    <string name="feedback"><u>反馈</u></string>

  <string name="licenses_text1">
        <b>1 MaterialDateTimePicker</b>  \n\n
        Copyright © 2015 Wouter Dullaert  \n\n
        <b>2  Remindly  \n\n</b>
        Copyright © 2015 Blanyal D\'Souza \n\n
         <b>3 Pomodoro</b>  \n\n
      <b>Original Source by</b> <u>M. Wiggins</u>\n\n
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at\n\n

    http://www.apache.org/licenses/LICENSE-2.0\n\n

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License. \n\n\n
    </string>

    <string name="mail_text">联系我：sunday29@qq.com</string>
 <!-- <string name="licenses_text2">


    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at\n\n

    http://www.apache.org/licenses/LICENSE-2.0\n\n

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License. \n\n\n
    </string>-->
</resources>
