<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/layout_toolbar"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="148dp"
           android:layout_below="@+id/id_toolbar"
           android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
           android:id="@+id/add_reminder_layout_top"
           android:orientation="vertical"
          >

           <EditText
               android:layout_width="match_parent"
               android:layout_height="120dp"
               android:id="@+id/reminder_title"
               android:layout_marginLeft="16dp"
               android:layout_marginRight="16dp"
               android:hint="Reminder"
               android:textSize="18sp"
               android:lines="4"
               android:minLines="4"
               android:gravity="top|left"
               android:textColor="@color/editReminderTitleColor"
               android:scrollHorizontally="false"
               android:textColorHint="@color/titleHintColor"
               android:inputType="textCapWords|textMultiLine"

               />
       </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/add_reminder_layout_top"
        android:id="@+id/sv_edit_reminder">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_isActive"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setReminderHeight"
                >
                <ImageView
                    android:id="@+id/isActive_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/setReminderIconMarginLeft"
                    android:layout_marginRight="@dimen/setReminderIconMarginRight"
                    android:src="@mipmap/audio_on32px"/>
                <TextView
                    android:layout_below="@+id/isActive_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setReminderTextMarginLeft"
                    android:layout_marginTop="@dimen/setReminderTextMarginTop"
                    android:textSize="@dimen/setReminderTextSize"
                    android:textColor="@color/editReminderTitleColor"
                    android:text="@string/shut_off_reminder"/>


                <TextView
                    android:layout_toRightOf="@+id/isActive_icon"
                    android:id="@+id/set_active_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/setReminderTextSize"
                    android:textColor="@color/editReminderTitleColor"
                    android:layout_centerVertical="true"/>
                <Switch
                    android:id="@+id/active_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setReminderIconMarginLeft"
                    android:layout_marginRight="@dimen/setReminderIconMarginRight"
                    android:layout_toRightOf="@+id/set_active_text"
                    android:onClick="onSwitchActive"
                    android:checked="true"
                    android:textOn="开启"
                    android:textOff="关闭"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setReminderHeight"
                android:clickable="true"
                android:onClick="setDate"
                android:id="@+id/rl_date"
                >
                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/setReminderIconMarginLeft"
                    android:layout_marginRight="@dimen/setReminderIconMarginRight"
                    android:src="@mipmap/dateto32"
                    />
                <TextView
                    android:layout_below="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setReminderTextMarginLeft"
                    android:layout_marginTop="@dimen/setReminderTextMarginTop"
                    android:textSize="@dimen/setReminderTextSize"
                    android:textColor="@color/editReminderTitleColor"
                    android:text="@string/date"
                    />

                <TextView
                    android:layout_toRightOf="@+id/date_icon"
                    android:id="@+id/set_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/setReminderTextSize"
                    android:textColor="@color/editReminderTitleColor"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_time"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setReminderHeight"
                android:onClick="setTime"
                android:clickable="true"
                >
                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/setReminderIconMarginLeft"
                    android:layout_marginRight="@dimen/setReminderIconMarginRight"
                    android:src="@mipmap/circular32px"/>
                <TextView
                    android:layout_below="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setReminderTextMarginLeft"
                    android:layout_marginTop="@dimen/setReminderTextMarginTop"
                    android:textSize="@dimen/setReminderTextSize"
                    android:textColor="@color/editReminderTitleColor"
                    android:text="@string/time"/>
                <TextView
                    android:layout_toRightOf="@+id/time_icon"
                    android:id="@+id/set_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/setReminderTextSize"
                    android:textColor="@color/editReminderTitleColor"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
          <!--  <RelativeLayout
                android:id="@+id/rl_isPomodoro"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setReminderHeight"
                >
                <ImageView
                    android:id="@+id/isPomodoro_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/setReminderIconMarginLeft"
                    android:layout_marginRight="@dimen/setReminderIconMarginRight"
                    android:src="@mipmap/whitetomato32px"/>
                <TextView
                    android:layout_below="@+id/isPomodoro_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setReminderTextMarginLeft"
                    android:layout_marginTop="@dimen/setReminderTextMarginTop"
                    android:textSize="@dimen/setReminderTextSize"
                    android:textColor="@color/editReminderTitleColor"
                    android:text="@string/tomato_string"/>


                <Switch
                    android:id="@+id/pomodoro_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setReminderIconMarginLeft"
                    android:layout_marginRight="@dimen/setReminderIconMarginRight"
                    android:layout_toRightOf="@+id/isPomodoro_icon"
                    android:onClick="onSwitchRepeat"
                    android:checked="true"
                    android:textOn="开启"
                    android:textOff="关闭"/>
            </RelativeLayout>-->
            <RelativeLayout
                android:id="@+id/rl_isRepeat"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setReminderHeight"
                >
                <ImageView
                    android:id="@+id/isRepeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/setReminderIconMarginLeft"
                    android:layout_marginRight="@dimen/setReminderIconMarginRight"
                    android:src="@mipmap/repeat32px"/>
                <TextView
                    android:layout_below="@+id/isRepeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setReminderTextMarginLeft"
                    android:layout_marginTop="@dimen/setReminderTextMarginTop"
                    android:textSize="@dimen/setReminderTextSize"
                    android:textColor="@color/editReminderTitleColor"
                    android:text="@string/isRepeat"/>
                <TextView
                    android:layout_toRightOf="@+id/isRepeat_icon"
                    android:id="@+id/set_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/setReminderTextSize"
                    android:textColor="@color/editReminderTitleColor"
                    android:layout_centerVertical="true"/>

                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setReminderIconMarginLeft"
                    android:layout_marginRight="@dimen/setReminderIconMarginRight"
                    android:layout_toRightOf="@+id/set_repeat"
                    android:onClick="onSwitchRepeat"
                    android:checked="true"
                    android:textOn="重复"
                    android:textOff="从不"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_repeat_no"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setReminderHeight"
                android:onClick="setRepeatNo"
                android:clickable="true">
                <ImageView
                    android:id="@+id/repeat_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/setReminderIconMarginLeft"
                    android:layout_marginRight="@dimen/setReminderIconMarginRight"
                    android:src="@mipmap/repeattime32px"/>
                <TextView
                    android:layout_below="@+id/repeat_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setReminderTextMarginLeft"
                    android:layout_marginTop="@dimen/setReminderTextMarginTop"
                    android:textSize="@dimen/setReminderTextSize"
                    android:textColor="@color/editReminderTitleColor"
                    android:text="@string/repeatNo"/>
                <TextView
                    android:layout_toRightOf="@+id/repeat_no_icon"
                    android:id="@+id/set_repeat_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/setReminderTextSize"
                    android:textColor="@color/editReminderTitleColor"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_repeat_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setReminderHeight"
                android:onClick="selectRepeatType"
                android:clickable="true">
                <ImageView
                    android:id="@+id/repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/setReminderIconMarginLeft"
                    android:layout_marginRight="@dimen/setReminderIconMarginRight"
                    android:src="@mipmap/minus32px"/>

                <TextView
                    android:layout_below="@+id/repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/setReminderTextMarginLeft"
                    android:layout_marginTop="@dimen/setReminderTextMarginTop"
                    android:textSize="@dimen/setReminderTextSize"
                    android:textColor="@color/editReminderTitleColor"
                    android:text="@string/repeatType"/>
                <TextView
                    android:layout_toRightOf="@+id/repeat_type_icon"
                    android:id="@+id/set_repeat_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/setReminderTextSize"
                    android:textColor="@color/editReminderTitleColor"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>


        </LinearLayout>


    </ScrollView>
</RelativeLayout>